<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.pergunta.form.CadastroPerguntasFragment">

        <EditText
            android:id="@+id/editTextTituloPergunta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/t_tulo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/avalia_o"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btCadPergunta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/enviar_avalia_o"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:text="@string/q1"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupPergunta1"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTituloPergunta" />

        <RadioGroup
            android:id="@+id/radioGroupPergunta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTituloPergunta">

            <RadioButton
                android:id="@+id/rbtnPergunta1SIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/rbtnPergunta1NAO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_o" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupPergunta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPergunta1">

            <RadioButton
                android:id="@+id/rbtnPergunta2SIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/rbtnPergunta2NAO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_o" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupPergunta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPergunta2">

            <RadioButton
                android:id="@+id/rbtnPergunta3SIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/rbtnPergunta3NAO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_o" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupPergunta4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPergunta3">

            <RadioButton
                android:id="@+id/rbtnPergunta4SIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/rbtnPergunta4NAO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_o" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupPergunta5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btCadPergunta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPergunta4">

            <RadioButton
                android:id="@+id/rbtnPergunta5SIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/rbtnPergunta5NAO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_o" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/q2"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupPergunta2"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/q3"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupPergunta3"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/q4"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupPergunta4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/q5"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btCadPergunta"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupPergunta5"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>